--- a/Handwritingrecognition.ipynb
+++ b/Handwritingrecognition.ipynb
@@ -34,13 +34,13 @@
     "from sklearn.datasets import fetch_openml\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "from sklearn.svm import SVC  # Import Support Vector Classifier\n",
+    "from sklearn.svm import SVC  \n",
     "\n",
     
     "mnist = fetch_openml('mnist_784', version=1, as_frame=False)\n",
     "X, y = mnist.data, mnist.target\n",
     "y = y.astype(int)\n",
-    "X = X / 255.0  # Normalize pixel values\n",
+    "X = X / 255.0 \n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -103,7 +103,7 @@
     "    elif key == ord('e'):\n",
     "        drawing = False\n",
     "        print(\"Drawing stopped.\")\n",
-    "    elif key == ord('q'):  # Quit and predict the digit\n",
+    "    elif key == ord('q'):  ",
     "        print(\"Quitting... Predicting the digit.\")\n",
     "        break\n",
     "\n",
@@ -111,14 +111,14 @@
     "cv2.destroyAllWindows()\n",
     "\n",
 
-    "canvas_gray = cv2.cvtColor(canvas, cv2.COLOR_BGR2GRAY)  # Convert to grayscale\n",
+    "canvas_gray = cv2.cvtColor(canvas, cv2.COLOR_BGR2GRAY)\n",
     "\n",
 
-    "scale_factor = 1.5  # Increase brightness by 30%\n",
+    "scale_factor = 1.5 \n",
     "canvas_gray = np.clip(canvas_gray.astype(float) * scale_factor, 0, 255).astype(np.uint8)\n",
     "\n",
 
-    "_, thresh = cv2.threshold(canvas_gray, 127, 255, cv2.THRESH_BINARY_INV)  # Invert and threshold\n",
+    "_, thresh = cv2.threshold(canvas_gray, 127, 255, cv2.THRESH_BINARY_INV) \n",
     "contours, _ = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
     "if contours:\n",
@@ -126,7 +126,7 @@
     "    x, y, w, h = cv2.boundingRect(max(contours, key=cv2.contourArea))\n",
     "\n",
 
-    "    padding = 10  # Add 10 pixels of padding\n",
+    "    padding = 10  \n",
     "    x = max(0, x - padding)\n",
     "    y = max(0, y - padding)\n",
     "    w = min(canvas_gray.shape[1] - x, w + 2 * padding)\n",
@@ -159,7 +159,7 @@
     "canvas_normalized = canvas_inverted / 255.0\n",
     "\n",
 
-    "test_sample = canvas_normalized.reshape(1, -1)  # Shape: (1, 784)\n",
+    "test_sample = canvas_normalized.reshape(1, -1) \n",
     "\n",
 
     "predicted_digit = svm_model.predict(test_sample)\n",
