--- a/Handwritingrecognition.ipynb
+++ b/Handwritingrecognition.ipynb
@@ -103,7 +103,7 @@
     "    elif key == ord('e'):\n",
     "        drawing = False\n",
     "        print(\"Drawing stopped.\")\n",
-    "    elif key == ord('q'):  ",
+    "    elif key == ord('q'): \n",
     "        print(\"Quitting... Predicting the digit.\")\n",
     "        break\n",
     "\n",
